Pages completed. Hibernate added

--- a/SO-WebApp-shop/src/main/resources/messages.properties
+++ b/SO-WebApp-shop/src/main/resources/messages.properties
@@ -1,9 +1,12 @@
 ###############################
 ## Messages ##
 ###############################
-message.loginerror = Incorrect e-mail or password.
-message.servererror = Oh, there is some error on server. Try later!
-message.nullpage = Page not found. Business logic error.
-message.wrongaction = : command not found or wrong!
-message.duplicerror = There is user with such e-mail! Please, choose another one.
-message.syntaxerror = Please check whether you have correctly filled data.
+message.login_error = Incorrect e-mail or password.
+message.server_error = Oh, there is some error on server. Try later!
+message.duplic_error = There is user with such e-mail! Please, choose another one.
+message.syntax_error = Please check whether you have correctly filled data.
+message.empty_bag = Your bag is empty!
+message.black_list = You are in black list! You can't make orderings.
+
+message.null_page = Page not found. Business logic error.
+message.wrong_action = : command not found or wrong!
