--- a/AV-WebApp-Clinic/src/main/resources/messages_ru.properties
+++ b/AV-WebApp-Clinic/src/main/resources/messages_ru.properties
@@ -8,4 +8,4 @@ message.accesslevelerror = \u041d\u0435\u043a\u043e\u0440\u0440\u0435\u043a\u044
 message.emptyfields = \u041D\u0435 \u0432\u0441\u0435 \u043F\u043E\u043B\u044F \u0437\u0430\u043F\u043E\u043B\u043D\u0435\u043D\u044B
 message.toolongstring = \u041d\u0430\u0437\u0432\u0430\u043d\u0438\u0435 \u0441\u043b\u0438\u0448\u043a\u043e\u043c \u0434\u043b\u0438\u043d\u043d\u043e\u0435
 message.databaseerror = \u041E\u0448\u0438\u0431\u043A\u0430 \u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D\u0438\u044F \u0441 \u0411\u0414
-index.enterloginpass = Enter login and password
+index.enterloginpass = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043b\u043e\u0433\u0438\u043d \u0438 \u043f\u0430\u0440\u043e\u043b\u044c
