add i18n support to jsp pages

--- a/AA-WebApp-Testing-Spring-Hibernate/src/main/resources/i18n/messages.properties
+++ b/AA-WebApp-Testing-Spring-Hibernate/src/main/resources/i18n/messages.properties
@@ -9,13 +9,30 @@ page.home.menu.language=Language
 page.home.menu.language.english=English
 page.home.menu.language.belorussian=Belorussian
 page.home.menu.language.russian=Russian
+#Common registration form labels
+page.registration.input.login=Login
+page.registration.input.login.placeholder=Enter login...
+page.registration.input.password=Password
+page.registration.input.name=Name
+page.registration.input.name.placeholder=Enter name...
+page.registration.input.surname=Surname
+page.registration.input.surname.placeholder=Enter surname...
+page.registration.button=Register
 #Student registration form labels
 page.registration.student.title=Student registration
-page.registration.student.input.login=Login
-page.registration.student.input.login.placeholder=Enter login...
-page.registration.student.input.password=Password
-page.registration.student.input.name=Name
-page.registration.student.input.name.placeholder=Enter name...
-page.registration.student.input.surname=Surname
-page.registration.student.input.surname.placeholder=Enter surname...
-page.registration.student.button=Register
+#Tutor registration form labels
+page.registration.tutor.title=Tutor registration
+page.registration.tutor.input.subject=Subject
+page.registration.tutor.input.subject.placeholder=Enter subject...
+#Student profile labels
+page.profile.student.title=Student profile
+page.profile.student.name=Name
+page.profile.student.surname=Surname
+page.profile.student.scores=Received scores
+#Student menu labels
+page.profile.student.menu.home=Home
+page.profile.student.menu.tests=All tests
+page.student.menu.logout=Logout
+
+
+
