--- a/AA-WebApp-Testing-Spring-Hibernate/src/main/resources/i18n/messages_ru.properties
+++ b/AA-WebApp-Testing-Spring-Hibernate/src/main/resources/i18n/messages_ru.properties
@@ -9,13 +9,38 @@ page.home.menu.language=\u042f\u0437\u044b\u043a
 page.home.menu.language.english=\u0410\u043d\u0433\u043b\u0438\u0439\u0441\u043a\u0438\u0439
 page.home.menu.language.russian=\u0420\u0443\u0441\u0441\u043a\u0438\u0439
 page.home.menu.language.belorussian=\u0411\u0435\u043b\u043e\u0440\u0443\u0441\u0441\u043a\u0438\u0439
+#Common registration form labels
+page.registration.input.login=\u041b\u043e\u0433\u0438\u043d
+page.registration.input.login.placeholder=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043b\u043e\u0433\u0438\u043d...
+page.registration.input.password=\u041f\u0430\u0440\u043e\u043b\u044c
+page.registration.input.name=\u0418\u043c\u044f
+page.registration.input.name.placeholder=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0438\u043c\u044f...
+page.registration.input.surname=\u0424\u0430\u043c\u0438\u043b\u0438\u044f
+page.registration.input.surname.placeholder=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0444\u0430\u043c\u0438\u043b\u0438\u044e...
+page.registration.button=\u0417\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043e\u0432\u0430\u0442\u044c
 #Student registration form labels
 page.registration.student.title=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044f \u0441\u0442\u0443\u0434\u0435\u043d\u0442\u0430
-page.registration.student.input.login=\u041b\u043e\u0433\u0438\u043d
-page.registration.student.input.login.placeholder=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043b\u043e\u0433\u0438\u043d...
-page.registration.student.input.password=\u041f\u0430\u0440\u043e\u043b\u044c
-page.registration.student.input.name=\u0418\u043c\u044f
-page.registration.student.input.name.placeholder=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0438\u043c\u044f...
-page.registration.student.input.surname=\u0424\u0430\u043c\u0438\u043b\u0438\u044f
-page.registration.student.input.surname.placeholder=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0444\u0430\u043c\u0438\u043b\u0438\u044e...
-page.registration.student.button=\u0417\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043e\u0432\u0430\u0442\u044c
+#Tutor registration form labels
+page.registration.tutor.title=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044f \u0442\u044c\u044e\u0442\u043e\u0440\u0430
+page.registration.tutor.input.subject=\u041f\u0440\u0435\u0434\u043c\u0435\u0442
+page.registration.tutor.input.subject.placeholder=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043f\u0440\u0435\u0434\u043c\u0435\u0442...
+#Student profile labels
+page.profile.student.title=\u041f\u0440\u043e\u0444\u0438\u043b\u044c \u0441\u0442\u0443\u0434\u0435\u043d\u0442\u0430
+page.profile.student.name=\u0418\u043c\u044f
+page.profile.student.surname=\u0424\u0430\u043c\u0438\u043b\u0438\u044f
+page.profile.student.scores=\u041d\u0430\u0431\u0440\u0430\u043d\u043d\u044b\u0435 \u0431\u0430\u043b\u043b\u044b
+#Student menu labels
+page.profile.student.menu.home=\u041d\u0430 \u0433\u043b\u0430\u0432\u043d\u0443\u044e
+page.profile.student.menu.tests=\u0412\u0441\u0435 \u0442\u0435\u0441\u0442\u044b
+page.student.menu.logout=\u0412\u044b\u0439\u0442\u0438 \u0438\u0437 \u0441\u0438\u0441\u0442\u0435\u043c\u044b
+
+
+
+
+
+
+
+
+
+
+
