add i18n to jsp pages

--- a/AA-WebApp-Testing-Spring-Hibernate/src/main/resources/i18n/messages_en.properties
+++ b/AA-WebApp-Testing-Spring-Hibernate/src/main/resources/i18n/messages_en.properties
@@ -9,14 +9,15 @@ page.home.menu.language=Language
 page.home.menu.language.english=English
 page.home.menu.language.belorussian=Belorussian
 page.home.menu.language.russian=Russian
+#Common labels
+page.login=Login
+page.input.login.placeholder=Enter login...
+page.password=Password
+page.name=Name
+page.input.name.placeholder=Enter name...
+page.surname=Surname
+page.surname.placeholder=Enter surname...
 #Common registration form labels
-page.registration.input.login=Login
-page.registration.input.login.placeholder=Enter login...
-page.registration.input.password=Password
-page.registration.input.name=Name
-page.registration.input.name.placeholder=Enter name...
-page.registration.input.surname=Surname
-page.registration.input.surname.placeholder=Enter surname...
 page.registration.button=Register
 #Student registration form labels
 page.registration.student.title=Student registration
@@ -26,13 +27,16 @@ page.registration.tutor.input.subject=Subject
 page.registration.tutor.input.subject.placeholder=Enter subject...
 #Student profile labels
 page.profile.student.title=Student profile
-page.profile.student.name=Name
-page.profile.student.surname=Surname
 page.profile.student.scores=Received scores
 #Student menu labels
-page.profile.student.menu.home=Home
-page.profile.student.menu.tests=All tests
+page.student.menu.home=Home
+page.student.menu.tests=All tests
 page.student.menu.logout=Logout
+# Login page labels
+page.login.title=Authorization
+page.login.form.title=System entrance
+page.login.button=Login
+
 
 
 
