--- a/AA-WebApp-Testing-Spring-Hibernate/src/main/resources/i18n/messages_ru.properties
+++ b/AA-WebApp-Testing-Spring-Hibernate/src/main/resources/i18n/messages_ru.properties
@@ -17,6 +17,7 @@ page.name=\u0418\u043c\u044f
 page.input.name.placeholder=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0438\u043c\u044f...
 page.surname=\u0424\u0430\u043c\u0438\u043b\u0438\u044f
 page.surname.placeholder=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0444\u0430\u043c\u0438\u043b\u0438\u044e...
+page.subject=\u041f\u0440\u0435\u0434\u043c\u0435\u0442
 #Common registration form labels
 page.registration.button=\u0417\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043e\u0432\u0430\u0442\u044c
 #Student registration form labels
@@ -28,20 +29,44 @@ page.registration.tutor.input.subject.placeholder=\u0412\u0432\u0435\u0434\u0438
 #Student profile labels
 page.profile.student.title=\u041f\u0440\u043e\u0444\u0438\u043b\u044c \u0441\u0442\u0443\u0434\u0435\u043d\u0442\u0430
 page.profile.student.scores=\u041d\u0430\u0431\u0440\u0430\u043d\u043d\u044b\u0435 \u0431\u0430\u043b\u043b\u044b
+#Tutor profile labels
+page.profile.tutor.title=\u041f\u0440\u043e\u0444\u0438\u043b\u044c \u0442\u044c\u044e\u0442\u043e\u0440\u0430
 #Student menu labels
 page.student.menu.home=\u041d\u0430 \u0433\u043b\u0430\u0432\u043d\u0443\u044e
 page.student.menu.tests=\u0412\u0441\u0435 \u0442\u0435\u0441\u0442\u044b
 page.student.menu.logout=\u0412\u044b\u0439\u0442\u0438 \u0438\u0437 \u0441\u0438\u0441\u0442\u0435\u043c\u044b
+page.student.menu.profile=\u041f\u0440\u043e\u0444\u0438\u043b\u044c
+#Tutor menu labels
+page.tutor.menu.home=\u041d\u0430 \u0433\u043b\u0430\u0432\u043d\u0443\u044e
+page.tutor.menu.tests=\u0412\u0441\u0435 \u0442\u0435\u0441\u0442\u044b
+page.tutor.menu.logout=\u0412\u044b\u0439\u0442\u0438 \u0438\u0437 \u0441\u0438\u0441\u0442\u0435\u043c\u044b
+page.tutor.menu.profile=\u041f\u0440\u043e\u0444\u0438\u043b\u044c
+page.tutor.menu.students=\u0421\u0442\u0443\u0434\u0435\u043d\u0442\u044b
+page.tutor.menu.test.create=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u0442\u0435\u0441\u0442
 #Login page labels
 page.login.title=\u0410\u0432\u0442\u043e\u0440\u0438\u0437\u0430\u0446\u0438\u044f
 page.login.form.title=\u0412\u0445\u043e\u0434 \u0432 \u0441\u0438\u0441\u0442\u0435\u043c\u0443
 page.login.button=\u0412\u043e\u0439\u0442\u0438
-
-
-
-
-
-
+#Tests page labels
+page.tests.title=\u0414\u043e\u0441\u0442\u0443\u043f\u043d\u044b\u0435 \u0442\u0435\u0441\u0442\u044b
+page.tests.test.name=\u041d\u0430\u0437\u0432\u0430\u043d\u0438\u0435 \u0442\u0435\u0441\u0442\u0430
+page.tests.test.button=\u041f\u0440\u043e\u0439\u0442\u0438 \u0442\u0435\u0441\u0442
+#Students page labels
+page.students.title=\u0421\u043f\u0438\u0441\u043e\u043a \u0441\u0442\u0443\u0434\u0435\u043d\u0442\u043e\u0432
+page.students.student.name=\u0418\u043c\u044f \u0441\u0442\u0443\u0434\u0435\u043d\u0442\u0430
+page.students.student.surname=\u0424\u0430\u043c\u0438\u043b\u0438\u044f \u0441\u0442\u0443\u0434\u0435\u043d\u0442\u0430
+page.students.student.scores=\u041a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e \u043d\u0430\u0431\u0440\u0430\u043d\u043d\u044b\u0445 \u0431\u0430\u043b\u043b\u043e\u0432
+#Result page labels
+page.student.result.title=\u0420\u0435\u0437\u0443\u043b\u044c\u0442\u0430\u0442\u044b \u0442\u0435\u0441\u0442\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u044f
+page.student.result.result=\u0420\u0435\u0437\u0443\u043b\u044c\u0442\u0430\u0442:
+page.student.result.scores=\u0431\u0430\u043b\u043b(\u043e\u0432)
+page.student.result.answers=\u041e\u0442\u0432\u0435\u0442\u044b \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f:
+#Filling test form labels
+page.form.test.fill.title=\u0417\u0430\u043f\u043e\u043b\u043d\u0435\u043d\u0438\u0435 \u0434\u0430\u043d\u043d\u044b\u0445 \u0434\u043b\u044f \u0442\u0435\u0441\u0442\u0430
+page.form.test.fill.question=\u0422\u0435\u043a\u0441\u0442 \u0432\u043e\u043f\u0440\u043e\u0441\u0430
+page.form.test.fill.option=\u0422\u0435\u043a\u0441\u0442 \u0432\u0430\u0440\u0438\u0430\u043d\u0442\u0430
+page.form.test.fill.button=\u041f\u043e\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044c
+page.form.test.fill.scores=\u0411\u0430\u043b\u043b\u044b \u0437\u0430 \u0432\u043e\u043f\u0440\u043e\u0441
 
 
 
