--- a/AA-WebApp-Testing-Spring-Hibernate/src/main/resources/i18n/messages.properties
+++ b/AA-WebApp-Testing-Spring-Hibernate/src/main/resources/i18n/messages.properties
@@ -66,7 +66,20 @@ page.form.test.fill.question=Question text
 page.form.test.fill.option=Option text
 page.form.test.fill.button=Submit
 page.form.test.fill.scores=Scores
-
+#Error page labels
+page.error.title=Error
+page.error.message=Error occurred
+page.error.ref=Return to home page
+#Creation test form labels
+page.test.creation.title=Create new test
+page.test.creation.params=Enter params for new test creation
+page.test.creation.input.name=Test name
+page.test.creation.input.name.placeholder=Enter test name...
+page.test.creation.input.questions=Test question amount
+page.test.creation.input.questions.placeholder=Enter test question amount...
+page.test.creation.input.options=Question option amount
+page.test.creation.input.options.placeholder=Enter question option amount...
+page.test.creation.button=Submit
 
 
 
