Add validation to all forms

--- a/AA-WebApp-Testing-Spring-Hibernate/src/main/resources/i18n/validation_en.properties
+++ b/AA-WebApp-Testing-Spring-Hibernate/src/main/resources/i18n/validation_en.properties
@@ -1,3 +1,7 @@
-test.name.size.error=Test name should be between 2 and 20 characters long
-test.name.fill.error=Test name cannot be empty
+option.amount.format.error=Option amount should be numeric greater than 0
+option.text.format.error=Option text must have at least one symbol
+question.amount.format.error=Question amount should be numeric greater than 0
+question.scores.number=Question scores number should be numeric
+question.text.format.error=Question text should has at least one symbol length
+scores.amount.format.error=Scores amount must be numeric at least one symbol length
 test.name.format.error=Test name should be one or more words divided by space(s)
