--- a/AA-WebApp-Testing-Spring-Hibernate/src/main/resources/i18n/validation_ru.properties
+++ b/AA-WebApp-Testing-Spring-Hibernate/src/main/resources/i18n/validation_ru.properties
@@ -1,3 +1,7 @@
-test.name.size.error=Название теста должно иметь длину от 2 до 20 characters long
-test.name.fill.error=Название теста не может не может быть не заполнено
+option.amount.format.error=Option amount should be numeric greater than 0
+option.text.format.error=Option name must have at least one symbol
+question.amount.format.error=Question amount should be numeric greater than 0
+question.scores.number=Question scores number should be numeric
+question.text.format.error=Question text should has at least one symbol length
+scores.amount.format.error=Scores amount must be numeric at least one symbol length
 test.name.format.error=Название теста должно состоять из одного и более слов, разделенных пробелом(и)
