--- a/AV-WebApp-Clinic/src/main/resources/i18n/messages_en.properties
+++ b/AV-WebApp-Clinic/src/main/resources/i18n/messages_en.properties
@@ -16,6 +16,8 @@ registration.nurse = Nurse
 common.submit = Ok
 common.emptylist = Empty list
 common.login = Login:
+common.username = You are logged in as:
+common.logout = Logout
 common.password = Password:
 
 error.title = Error page
