--- a/AV-WebApp-Clinic/src/main/resources/i18n/messages_ru.properties
+++ b/AV-WebApp-Clinic/src/main/resources/i18n/messages_ru.properties
@@ -16,6 +16,8 @@ registration.nurse = \u041c\u0435\u0434\u0441\u0435\u0441\u0442\u0440\u0430
 common.submit = \u041e\u043a
 common.emptylist = \u0421\u043f\u0438\u0441\u043e\u043a \u043f\u0443\u0441\u0442
 common.login = \u041b\u043e\u0433\u0438\u043d:
+common.username = \u0412\u044b \u0432\u043e\u0448\u043b\u0438 \u043a\u0430\u043a:
+common.logout = \u0412\u044b\u0439\u0442\u0438
 common.password = \u041f\u0430\u0440\u043e\u043b\u044c:
 
 error.title = \u0421\u0442\u0440\u0430\u043d\u0438\u0446\u0430 \u043e\u0448\u0438\u0431\u043a\u0438
