--- a/AV-WebApp-Clinic/src/main/resources/i18n/messages_en.properties
+++ b/AV-WebApp-Clinic/src/main/resources/i18n/messages_en.properties
@@ -7,7 +7,7 @@ message.emptyfields = Fill in all the fields
 message.toolongstring = The name is too long
 message.accesslevelerror = Incorrect choosing of user specialization
 
-index.title = Authorization
+index.title = Login Page
 registration.title = Registration
 registration.accesslevel = Speciality:
 registration.doctor = Doctor
